fix aria-current value for nav bar to "page", improve nav css readability

--- a/css/nav.css
+++ b/css/nav.css
@@ -5,6 +5,7 @@
 	--nav-header-text-color: black;
 	--nav-link-active-text-color: white;
 	--nav-link-active-bg-color: var(--main-bg-color, #404040);
+	--nav-transition-speed: 250ms;
 }
 
 @media screen and (prefers-color-scheme: light) {
@@ -20,7 +21,6 @@
 
 header {
 	display: grid;
-	grid-template-columns: auto 1fr;
 	align-items: center;
 	width: 100%;
 	background-color: var(--nav-bg-color);
@@ -42,8 +42,12 @@ nav {
 
 nav a, header h1, label[for="navtoggle"] {
 	text-align: left;
-	padding: 8px 10px;
+	padding-left: 8px;
+	padding-right: 8px;
 	text-decoration: none;
+	vertical-align: middle;
+	height: 2em;
+	line-height: 2em;
 }
 
 label[for="navtoggle"], #navtoggle {
@@ -51,37 +55,40 @@ label[for="navtoggle"], #navtoggle {
 }
 
 @media screen and (width >= 600px){
-	nav a:hover, nav a[aria-current="true"] {
-		color: var(--nav-link-active-text-color);
-		background-color: var(--nav-link-active-bg-color);
-	}
-	
-	nav:hover a[aria-current="true"] {
-		color: var(--nav-text-color);
-		background-color: var(--nav-bg-color);
-	}
-
-	nav:hover a[aria-current="true"]:hover {
-		color: var(--nav-link-active-text-color);
-		background-color: var(--nav-link-active-bg-color);
+	header {
+		grid-template-columns: auto 1fr;
 	}
 
 	nav {
 		display: flex;
 		align-items: center;
 	}
+
+	nav a[aria-current="page"], nav a:hover {
+		color: var(--nav-link-active-text-color);
+		background-color: var(--nav-link-active-bg-color);
+	}
+	
+	nav:hover a[aria-current="page"]:has(~ a:hover) {
+		color: var(--nav-text-color);
+		background-color: var(--nav-bg-color);
+	}
+
+	nav:hover a[aria-current="page"]:hover {
+		color: var(--nav-link-active-text-color);
+		background-color: var(--nav-link-active-bg-color);
+	}
 }
 
 @media screen and (width <= 600px){
 	header {
-		display: grid;
 		grid-template-columns: 1fr auto;
 	}
 
 	nav {
 		display: block;
 		position: absolute;
-		top: 43px;
+		top: 2em;
 		right: 0;
 		background-color: var(--nav-bg-color);
 	}
@@ -99,16 +106,21 @@ label[for="navtoggle"], #navtoggle {
   
 	#navtoggle ~ nav a {
 		height: 0;
-		padding: 0 0.5em;
-		border: 0;
-		transition: height 250ms cubic-bezier(0.23, 1, 0.32, 1);
-		visibility: hidden;
+		line-height: 2em;
+		opacity: 0;
+		transition: 
+			height var(--nav-transition-speed) cubic-bezier(0.23, 1, 0.32, 1), 
+			opacity var(--nav-transition-speed) cubic-bezier(0.23, 1, 0.32, 1)
+		;
 	}
 
 	#navtoggle:checked ~ nav a {
-		height: 2.5em;
-		padding: 0.5em;
-		transition: height 250ms cubic-bezier(0.23, 1, 0.32, 1);
-		visibility: visible;
+		height: 2em;
+		line-height: 2em;
+		opacity: 1;
+		transition: 
+			height var(--nav-transition-speed) cubic-bezier(0.23, 1, 0.32, 1), 
+			opacity var(--nav-transition-speed) cubic-bezier(0.23, 1, 0.32, 1)
+		;
 	}
 }
